--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -17,9 +17,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:minHeight="64dp"
+        android:maxWidth="190dp"
         android:gravity="center_vertical"
         tools:text = "Text AAAA AAAA "
         tools:ignore="MissingConstraints" />
+
+    <CheckBox
+        android:id="@+id/important"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="6dp"
+        android:button="@android:drawable/star_big_off"
+
+        tools:ignore="MissingConstraints"></CheckBox>
 
     <CheckBox
         android:id="@+id/done"
@@ -28,9 +40,8 @@
         android:text="@string/done"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="70dp"
         android:layout_marginTop="6dp"
-
         tools:ignore="MissingConstraints"></CheckBox>
 
     <ImageView
@@ -39,10 +50,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="14dp"
         android:src="@android:drawable/ic_delete"
-
         ></ImageView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
