--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="СheckBoxStyle" parent="Base.Theme.AppCompat">
+
+        <item name="colorAccent">@color/yellow</item>
+        <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
     <style name="Theme.Todolistjavadvfu.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
