--- a/app/src/main/res/layout/activity_task_face.xml
+++ b/app/src/main/res/layout/activity_task_face.xml
@@ -6,38 +6,15 @@
     android:layout_height="match_parent">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-
-        android:id="@+id/tasks"
-        android:layout_width="407dp"
-        android:layout_height="614dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="5dp" />
-
     <EditText
-        android:id="@+id/title"
-        android:layout_width="397dp"
-        android:layout_height="92dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="top"
         android:hint="@string/task_text"
         android:minHeight="200dp"
         android:paddingLeft="16dp"
         android:paddingTop="30dp"
-        app:layout_constraintEnd_toEndOf="@+id/tasks"
-        app:layout_constraintStart_toStartOf="@+id/tasks"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_upload_you_tube"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
