--- a/app/src/main/res/layout/activity_list_face.xml
+++ b/app/src/main/res/layout/activity_list_face.xml
@@ -9,8 +9,8 @@
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/tasks"
-        android:layout_width="407dp"
-        android:layout_height="614dp"
+        android:layout_width="match_parent"
+        android:layout_height="631dp"
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="5dp" />
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="92dp"
         android:gravity="top"
-        android:hint="@string/task_text"
+        android:hint="@string/list_text"
         android:minHeight="200dp"
         android:paddingLeft="16dp"
         android:paddingTop="30dp"
