--- a/app/src/main/res/layout/activity_task_face.xml
+++ b/app/src/main/res/layout/activity_task_face.xml
@@ -7,6 +7,7 @@
 
 
     <EditText
+        android:id="@+id/text_for_task"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
